<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_security"
            android:icon="@drawable/ic_menu_security"
            android:title="@string/menu_security" />
    </group>

    <item android:title="@string/menu_information">
        <menu>
            <group>

                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_settings"
                    android:title="@string/menu_settings" />

                <item
                    android:id="@+id/nav_aboutus"
                    android:icon="@drawable/ic_menu_info"
                    android:title="@string/menu_aboutus" />

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_menu_logout"
                    android:title="@string/menu_logout" />

                <item
                    android:id="@+id/nav_exit"
                    android:icon="@drawable/ic_menu_exit"
                    android:title="@string/menu_exit" />

            </group>
        </menu>
    </item>

</menu>
