<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:openDrawer="start">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        tools:context=".Settings">


        <ScrollView
            android:id="@+id/changeScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:layout_marginTop="50dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorText"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/emailChange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/element_background_dark"
                    android:text="@string/change_email"
                    android:textAllCaps="false"
                    android:textColor="@color/colorText"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/passwordChange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/element_background_dark"
                    android:text="@string/change_password"
                    android:textAllCaps="false"
                    android:textColor="@color/colorText"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/deleteAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/element_background_dark"
                    android:text="@string/delete_account"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/passwordChange"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

        </ScrollView>



    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_hamburger_menu"
        app:menu="@menu/activity_hamburger_menu_drawer" />

</android.support.v4.widget.DrawerLayout>