<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:openDrawer="start"
    android:background="@drawable/gradient">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/add_room_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/name"
            android:textSize="22sp"
            android:textColor="@color/colorText"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/add_room_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/element_background_light"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/colorText" />

        <TextView
            android:id="@+id/add_room_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/temperature"
            android:textSize="22sp"
            android:textColor="@color/colorText"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/add_room_temperature_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/element_background_light"
            android:ems="10"
            android:hint="@string/temperature"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/colorText" />

        <TextView
            android:id="@+id/add_room_brightness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/brightness"
            android:textSize="22sp"
            android:textColor="@color/colorText"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/add_room_brightness_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/element_background_light"
            android:ems="10"
            android:hint="@string/brightness"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/colorText" />

        <Button
            android:id="@+id/add_room_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:background="@drawable/element_background_dark"
            android:textAllCaps="false"
            android:width="100dp"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"/>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_hamburger_menu"
        app:menu="@menu/activity_hamburger_menu_drawer" />

</android.support.v4.widget.DrawerLayout>